Changes done actuator info api

--- a/catalog-service/src/main/resources/application.properties
+++ b/catalog-service/src/main/resources/application.properties
@@ -2,4 +2,5 @@ spring.application.name=catalog-service
 server.port=8081
 server.shutdown=graceful
 
+management.info.git.mode=full
 management.endpoints.web.exposure.include=*
