Added Configuration to build image on docker

--- a/catalog-service/pom.xml
+++ b/catalog-service/pom.xml
@@ -30,6 +30,7 @@
 		<java.version>25</java.version>
 		<maven.compiler.source>25</maven.compiler.source>
 		<maven.compiler.target>25</maven.compiler.target>
+		<dockerImageName>dark/bookstore-${project.artifactId}</dockerImageName>
 	</properties>
 	<dependencies>
         <dependency>
@@ -141,6 +142,11 @@
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
+				<configuration>
+					<image>
+						<name>${dockerImageName}</name>
+					</image>
+				</configuration>
                 <executions>
                     <execution>
                         <goals>
