--- a/order-service/src/main/resources/application.properties
+++ b/order-service/src/main/resources/application.properties
@@ -3,7 +3,12 @@ server.port=8082
 server.shutdown=graceful
 
 ######## Order Service Configuration  #########
-
+orders.catalog-service-url=http://localhost:8081
+orders.order-events-exchange=orders-exchange
+orders.new-orders-queue=new-orders
+orders.delivered-orders-queue=delivered-orders
+orders.cancelled-orders-queue=cancelled-orders
+orders.error-orders-queue=error-orders
 
 
 
