--- a/order-service/src/main/resources/application.properties
+++ b/order-service/src/main/resources/application.properties
@@ -10,6 +10,7 @@ orders.delivered-orders-queue=delivered-orders
 orders.cancelled-orders-queue=cancelled-orders
 orders.error-orders-queue=error-orders
 
+orders.publish-order-events-job-cron=*/5 * * * * *
 
 
 
